--- a/ContactsApplication/ContactsApplication.Domain/ContactsApplication.Domain.csproj
+++ b/ContactsApplication/ContactsApplication.Domain/ContactsApplication.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="3.3.0" />
+  </ItemGroup>
+
 </Project>
