--- a/ContactsApplication/ContactsApplication.Infrastructure/ContactsApplication.Infrastructure.csproj
+++ b/ContactsApplication/ContactsApplication.Infrastructure/ContactsApplication.Infrastructure.csproj
@@ -13,6 +13,7 @@
 
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.3" />
 	  <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.3" />
 	</ItemGroup>
 
