--- a/ContactsApplication/ContactsApplication.API/appsettings.Production.json
+++ b/ContactsApplication/ContactsApplication.API/appsettings.Production.json
@@ -1,7 +1,7 @@
-{
+﻿{
   "MongoDb": {
-    "ConnectionString": "mongodb://admin:admin@localhost:27018/",
-    "DatabaseName": "contactsDb"
+    "ConnectionString": "",
+    "DatabaseName": "contacts"
   },
   "Logging": {
     "LogLevel": {
