--- a/ContactsApplication/ContactsApplication.API/appsettings.Production.json
+++ b/ContactsApplication/ContactsApplication.API/appsettings.Production.json
@@ -1,7 +1,7 @@
 ﻿{
   "MongoDb": {
     "ConnectionString": "",
-    "DatabaseName": "contacts"
+    "DatabaseName": "contactsDb"
   },
   "Logging": {
     "LogLevel": {
