--- a/ContactsApplication/docker-compose.yml
+++ b/ContactsApplication/docker-compose.yml
@@ -2,5 +2,11 @@ services:
   contactsAppDb:
     image: mongo:latest
 
+  contacts.application.api:
+    image: ${DOCKER_REGISTRY-}catalogapi
+    build:
+     context: .
+     dockerfile: ContactsApplication.API/Dockerfile  
+
 volumes:
   contactsAppDb_vol:
