--- a/ContactsApplication/docker-compose.override.yml
+++ b/ContactsApplication/docker-compose.override.yml
@@ -9,3 +9,21 @@ services:
         - "27019:27017"
     volumes:
       - contactsAppDb_vol:/data/db
+
+  contacts.application.api:
+    environment:
+      - ASPNETCORE_HTTP_PORTS=8080
+      - ASPNETCORE_HTTPS_PORTS=8081
+      - ASPNETCORE_ENVIRONMENT=Development
+      # - ASPNETCORE_ENVIRONMENT=Production
+      # - MongoDb__ConnectionString=mongodb://admin:admin@localhost:27019/
+      - MongoDb__ConnectionString=mongodb+srv://admin:admin@contactsapplicationclus.avilejp.mongodb.net/?retryWrites=true&w=majority&ssl=true&appName=contactsApplicationCluster
+      - MongoDb__DatabaseName=contactsDb
+    depends_on:
+      - contactsAppDb
+    ports:
+      - "5050:8080"
+      - "5051:8081"
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
