--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         run: echo ${{ secrets.HEROKU_API_KEY }} | docker login --username=_ --password-stdin registry.heroku.com
 
       - name: Build Docker image
-        run: docker build -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web .
+        run: docker build -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web -f ContactsApplication/ContactsApplication.API/Dockerfile ContactsApplication/
 
       - name: Push Docker image
         run: docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
