--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -10,7 +10,7 @@ env:
 
 jobs:
   deploy:
-    name: Deploy app
+    name: contactsapplication-api
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
