--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -11,9 +11,9 @@ env:
 
 jobs:
   deploy:
-    name: contactsapplication-api
+    name: contactsapplication
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only -a contactsapplication-api
+      - run: flyctl deploy --remote-only -a contactsapplication
