--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 env:
-  FLY_API_TOKEN: fo1_0py6W7nusz68a7XBnrBFVADyuWC-1E6OwhunKTGzgUw
+  FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
 
 jobs:
