--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -16,4 +16,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only -a contactsapplication
+      - run: flyctl deploy -a contactsapplication
