--- a/ContactsApplication/fly.toml
+++ b/ContactsApplication/fly.toml
@@ -1,10 +1,12 @@
-# fly.toml app configuration file generated for contactsapplication on 2025-04-05T18:51:38+04:00
+# fly.toml app configuration file generated for contactsapplication on 2025-04-05T20:51:34+04:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
 app = 'contactsapplication'
 primary_region = 'ams'
+
+[build]
 
 [http_service]
   internal_port = 8080
