--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -14,4 +14,5 @@ jobs:
     name: contactsapplication
     runs-on: ubuntu-latest
     steps:
+      - run: flyctl launch
       - run: flyctl deploy -a contactsapplication
