--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -11,8 +11,11 @@ env:
 
 jobs:
   deploy:
-    name: contactsapplication
+    name: Deploy to Fly.io
     runs-on: ubuntu-latest
     steps:
-      - run: flyctl launch
+      - uses: actions/checkout@v3
+
+      - uses: superfly/flyctl-actions/setup-flyctl@master
+
       - run: flyctl deploy -a contactsapplication
