--- a/ContactsApplication/Dockerfile
+++ b/ContactsApplication/Dockerfile
@@ -10,10 +10,10 @@ ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 
 # Copy project files
-COPY ContactsApplication/ContactsApplication.Application/ContactsApplication.Application.csproj ContactsApplication.Application/
-COPY ContactsApplication/ContactsApplication.Domain/ContactsApplication.Domain.csproj ContactsApplication.Domain/
-COPY ContactsApplication/ContactsApplication.Infrastructure/ContactsApplication.Infrastructure.csproj ContactsApplication.Infrastructure/
-COPY ContactsApplication/ContactsApplication.API/ContactsApplication.API.csproj ContactsApplication.API/
+COPY ContactsApplication.Application/ContactsApplication.Application.csproj ContactsApplication.Application/
+COPY ContactsApplication.Domain/ContactsApplication.Domain.csproj ContactsApplication.Domain/
+COPY ContactsApplication.Infrastructure/ContactsApplication.Infrastructure.csproj ContactsApplication.Infrastructure/
+COPY ContactsApplication.API/ContactsApplication.API.csproj ContactsApplication.API/
 
 # Restore packages
 RUN dotnet restore "ContactsApplication.API/ContactsApplication.API.csproj"
