--- a/ContactsApplication/ContactsApplication.API/appsettings.Production.json
+++ b/ContactsApplication/ContactsApplication.API/appsettings.Production.json
@@ -1,6 +1,6 @@
 ﻿{
   "MongoDb": {
-    "ConnectionString": "mongodb+srv://admin:admin@contactsapplicationclus.avilejp.mongodb.net/?retryWrites=true&w=majority&appName=contactsApplicationCluster",
+    "ConnectionString": "mongodb+srv://admin:admin@contactsapplicationclus.avilejp.mongodb.net/contactsdb?retryWrites=true&w=majority&ssl=true&appName=contactsApplicationCluster",
     "DatabaseName": "contactsDb"
   },
   "Logging": {
