--- a/ContactsApplication/ContactsApplication.API/appsettings.Development.json
+++ b/ContactsApplication/ContactsApplication.API/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "MongoDb": {
-    "ConnectionString": "mongodb://admin:admin@localhost:27019/",
+    //"ConnectionString": "mongodb://admin:admin@localhost:27019/",
+    "ConnectionString": "mongodb+srv://admin:admin@contactsapplicationclus.avilejp.mongodb.net/contactsdb?retryWrites=true&w=majority&ssl=true&appName=contactsApplicationCluster",
     "DatabaseName": "contactsDb"
   },
   "Logging": {
